--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "song-image-generator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://octavcodrea.com/songvis",
+  "homepage": "https://songvis.octavcodrea.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -33,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://songvis.octavcodrea:3000",
+  "server": "node-env-run server --exec nodemon",
+  "dev": "run-p server start"
+
 }
